--- a/paginas/directions.html
+++ b/paginas/directions.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Cómo llegar</h1>
+    <h1>Estoy aprendiendo con Git</h1>
     <p>Por periférico, salir en Av. del Conscripto</p>
     <p>Al terminar Conscripto continuar derecho por La Herradura</p>
     <p>Dar vuelta a la izquierda sobre Paseo de la Herradura</p>
